# netgent

./: .gitignore  Dockerfile  analyze_planner_results.py  analyze_real_traces.py  baseline_workflows.json  baseline_workflows.json.authoring_log.jsonl  baseline_workflows.json.save  exp1_thinking_budget.py  exp2_end_to_end.py  exp3_fitts_calibration.py  exp4_detection_eval.py  exp5_fewshot_ablation.py  exp7_author_baseline.py  exp7_baseline_comparison.py  exp7_try_once.py  exp8_controller_ab.py  exp_common.py  hard_battery_v2.json  hard_battery_v2_pair.json  hard_prompts.txt  human_controller.py  make_paper_figures.py  medium_prompts_exp2.json  my_prompt.txt  netgent_planner.py  patch_fixes.py  patch_imitation_v2.py  patch_prompt_v2.py  patch_scroll_fix.py  planner_telemetry.py  plot_human_trace.py  run_planner.py  start_display.sh  test_battery.json  test_generate_workflow.py
examples/bash_workflows/: ping.sh  wget-download.sh
examples/web_browsing/twitch-watch/results/: twitch-stats_result.json
netgent_env/: pyvenv.cfg
prework/: API_KEYS.md  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: start.sh
src/netgent/: cli.py
src/netgent/browser/: stats_logger.py
test1/: my_test.json  plot_throughput.py
workflow_tests/: p10_r1.json  p10_r2.json  p10_r3.json  p11_r1.json  p11_r2.json  p11_r3.json  p12_r1.json  p12_r2.json  p12_r3.json  p1_r1.json  p1_r2.json  p1_r3.json  p2_r1.json  p2_r2.json  p2_r3.json  p3_r1.json  p3_r2.json  p3_r3.json  p4_r1.json  p4_r2.json  p4_r3.json  p5_r1.json  p5_r2.json  p5_r3.json  p6_r1.json  p6_r2.json  p6_r3.json  p7_r1.json  p7_r2.json  p7_r3.json  p8_r1.json  p8_r2.json  p8_r3.json  p9_r1.json  p9_r2.json  p9_r3.json  report.txt  report2.txt  results.csv  results2.csv
workflow_tests/telemetry/: attempts.jsonl  llm_calls.jsonl  runs.jsonl
(+2 files in other folders)
